--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
 div {
+    display: flex;
+    flex-direction: column;
     margin: auto;
     width: 50%;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
