--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,23 @@
 div {
     display: flex;
     flex-direction: column;
-    margin: auto;
-    width: 50%;
 }
 
 .row {
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+button {
+    width: 100px;
+    height: 100px;
+    padding: 0px;
+}
+
+.display {
+    align-self: center;
+    width: 396px;
+    height: 100px;
+    border: solid pink 2px;
 }
