--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,14 @@ button {
     justify-content: flex-end;
 }
 
+.sign {
+    flex-grow: 1;
+}
+
+.number {
+    flex-grow: 1;
+}
+
 .fourth {
     border-bottom: solid #F3DAF7 25px;
     border-bottom-right-radius: 75px;
