--- a/styles.css
+++ b/styles.css
@@ -31,15 +31,18 @@ button {
     border-bottom: solid #F3DAF7 10px;
     border-radius: 75px;
     font-size: xxx-large;
-    justify-content: flex-end;
 }
 
 .sign {
     flex-grow: 1;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .number {
     flex-grow: 1;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .fourth {
